Bug #42235: Make sure title does not wrap below logo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-4.2-0@78242 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-portal/www/style.styl
+++ b/management/univention-portal/www/style.styl
@@ -45,7 +45,10 @@
 		margin-right: -(@padding-right)
 
 		.umcHeaderLeft
-			float: left
+			position: absolut
+			left: 0
+			top: 0
+			width: 100%
 			height: 100%
 
 			.umcCustomLogo
